//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// This code was generated by XmlSchemaClassGenerator version 3.0.1188.0 using the following command:
// xscgen -n EchoReborn.Data.Models.Generated .\Content\xsd\EchoReborn.xsd
namespace EchoReborn.Data.Models.Generated
{
    
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("EchoReborn", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    [System.Xml.Serialization.XmlRootAttribute("echoReborn", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public partial class EchoReborn
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("initialState")]
        public InitialState InitialState { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("gameState")]
        public GameState GameState { get; set; }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("InitialState", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    [System.Xml.Serialization.XmlRootAttribute("initialState", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public partial class InitialState
    {
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<Location> _locations;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlArrayAttribute("locations")]
        [System.Xml.Serialization.XmlArrayItemAttribute("location", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
        public System.Collections.ObjectModel.Collection<Location> Locations
        {
            get
            {
                return _locations;
            }
            private set
            {
                _locations = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="InitialState" /> class.</para>
        /// </summary>
        public InitialState()
        {
            this._locations = new System.Collections.ObjectModel.Collection<Location>();
            this._enemies = new System.Collections.ObjectModel.Collection<Enemy>();
            this._skills = new System.Collections.ObjectModel.Collection<Skill>();
        }
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<Enemy> _enemies;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlArrayAttribute("enemies")]
        [System.Xml.Serialization.XmlArrayItemAttribute("enemy", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
        public System.Collections.ObjectModel.Collection<Enemy> Enemies
        {
            get
            {
                return _enemies;
            }
            private set
            {
                _enemies = value;
            }
        }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("character")]
        public Character Character { get; set; }
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<Skill> _skills;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlArrayAttribute("skills")]
        [System.Xml.Serialization.XmlArrayItemAttribute("skill", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
        public System.Collections.ObjectModel.Collection<Skill> Skills
        {
            get
            {
                return _skills;
            }
            private set
            {
                _skills = value;
            }
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Locations", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class Locations
    {
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<Location> _location;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("location")]
        public System.Collections.ObjectModel.Collection<Location> Location
        {
            get
            {
                return _location;
            }
            private set
            {
                _location = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="Locations" /> class.</para>
        /// </summary>
        public Locations()
        {
            this._location = new System.Collections.ObjectModel.Collection<Location>();
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Location", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class Location
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("name")]
        public string Name { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("difficulty")]
        public int Difficulty { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("isStartLocation")]
        public bool IsStartLocation { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("isFinalLocation")]
        public bool IsFinalLocation { get; set; }
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<int> _connectedLocationId;
        
        [System.Xml.Serialization.XmlElementAttribute("connectedLocationId")]
        public System.Collections.ObjectModel.Collection<int> ConnectedLocationId
        {
            get
            {
                return _connectedLocationId;
            }
            private set
            {
                _connectedLocationId = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Gets a value indicating whether the ConnectedLocationId collection is empty.</para>
        /// </summary>
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        public bool ConnectedLocationIdSpecified
        {
            get
            {
                return (this.ConnectedLocationId.Count != 0);
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="Location" /> class.</para>
        /// </summary>
        public Location()
        {
            this._connectedLocationId = new System.Collections.ObjectModel.Collection<int>();
            this._enemyEncounterId = new System.Collections.ObjectModel.Collection<int>();
        }
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<int> _enemyEncounterId;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlArrayAttribute("enemyEncounterId")]
        [System.Xml.Serialization.XmlArrayItemAttribute("enemyRefs", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
        public System.Collections.ObjectModel.Collection<int> EnemyEncounterId
        {
            get
            {
                return _enemyEncounterId;
            }
            private set
            {
                _enemyEncounterId = value;
            }
        }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlAttributeAttribute("id")]
        public int Id { get; set; }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("EnemyRefs", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class EnemyRefs
    {
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<int> _enemyRefsProperty;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("enemyRefs")]
        public System.Collections.ObjectModel.Collection<int> EnemyRefsProperty
        {
            get
            {
                return _enemyRefsProperty;
            }
            private set
            {
                _enemyRefsProperty = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="EnemyRefs" /> class.</para>
        /// </summary>
        public EnemyRefs()
        {
            this._enemyRefsProperty = new System.Collections.ObjectModel.Collection<int>();
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Enemies", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    [System.Xml.Serialization.XmlRootAttribute("enemies", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public partial class Enemies
    {
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<Enemy> _enemy;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("enemy")]
        public System.Collections.ObjectModel.Collection<Enemy> Enemy
        {
            get
            {
                return _enemy;
            }
            private set
            {
                _enemy = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="Enemies" /> class.</para>
        /// </summary>
        public Enemies()
        {
            this._enemy = new System.Collections.ObjectModel.Collection<Enemy>();
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Enemy", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class Enemy
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("name")]
        public string Name { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("difficulty")]
        public int Difficulty { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("maxHP")]
        public int MaxHp { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("animationClass")]
        public string AnimationClass { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("rewardXP")]
        public int RewardXp { get; set; }
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<int> _skills;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlArrayAttribute("skills")]
        [System.Xml.Serialization.XmlArrayItemAttribute("SkillRefs", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
        public System.Collections.ObjectModel.Collection<int> Skills
        {
            get
            {
                return _skills;
            }
            private set
            {
                _skills = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="Enemy" /> class.</para>
        /// </summary>
        public Enemy()
        {
            this._skills = new System.Collections.ObjectModel.Collection<int>();
        }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlAttributeAttribute("id")]
        public int Id { get; set; }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("SkillRefs", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class SkillRefs
    {
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<int> _skillRefsProperty;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("SkillRefs")]
        public System.Collections.ObjectModel.Collection<int> SkillRefsProperty
        {
            get
            {
                return _skillRefsProperty;
            }
            private set
            {
                _skillRefsProperty = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="SkillRefs" /> class.</para>
        /// </summary>
        public SkillRefs()
        {
            this._skillRefsProperty = new System.Collections.ObjectModel.Collection<int>();
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Character", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    [System.Xml.Serialization.XmlRootAttribute("character", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public partial class Character
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("level")]
        public int Level { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("experience")]
        public int Experience { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("currentHealth")]
        public int CurrentHealth { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("maxHealth")]
        public int MaxHealth { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("currentMana")]
        public int CurrentMana { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("maxMana")]
        public int MaxMana { get; set; }
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<int> _skills;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlArrayAttribute("skills")]
        [System.Xml.Serialization.XmlArrayItemAttribute("SkillRefs", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
        public System.Collections.ObjectModel.Collection<int> Skills
        {
            get
            {
                return _skills;
            }
            private set
            {
                _skills = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="Character" /> class.</para>
        /// </summary>
        public Character()
        {
            this._skills = new System.Collections.ObjectModel.Collection<int>();
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Skills", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    [System.Xml.Serialization.XmlRootAttribute("skills", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public partial class Skills
    {
        
        [System.Xml.Serialization.XmlIgnoreAttribute()]
        private System.Collections.ObjectModel.Collection<Skill> _skill;
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("skill")]
        public System.Collections.ObjectModel.Collection<Skill> Skill
        {
            get
            {
                return _skill;
            }
            private set
            {
                _skill = value;
            }
        }
        
        /// <summary>
        /// <para xml:lang="en">Initializes a new instance of the <see cref="Skills" /> class.</para>
        /// </summary>
        public Skills()
        {
            this._skill = new System.Collections.ObjectModel.Collection<Skill>();
        }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("Skill", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class Skill
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("type")]
        public SkillType Type { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("name")]
        public string Name { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("description")]
        public string Description { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("TargetType")]
        public TargetType TargetType { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("ManaCost")]
        public int ManaCost { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("HealthCost")]
        public int HealthCost { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("Damage")]
        public int Damage { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("Heal")]
        public int Heal { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("AnimationClass")]
        public string AnimationClass { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("SkillClass")]
        public string SkillClass { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlAttributeAttribute("id")]
        public int Id { get; set; }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("SkillType", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public enum SkillType
    {
        
        [System.Xml.Serialization.XmlEnumAttribute("BASIC")]
        Basic,
        
        [System.Xml.Serialization.XmlEnumAttribute("COMPLEX")]
        Complex,
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("TargetType", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public enum TargetType
    {
        
        [System.Xml.Serialization.XmlEnumAttribute("ALLIER")]
        Allier,
        
        [System.Xml.Serialization.XmlEnumAttribute("ENEMIES")]
        Enemies,
        
        [System.Xml.Serialization.XmlEnumAttribute("ALL")]
        All,
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("GameState", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    [System.Xml.Serialization.XmlRootAttribute("gameState", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    public partial class GameState
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("saveDate", DataType="dateTime")]
        public System.DateTime SaveDate { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("gameVersion")]
        public string GameVersion { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("playTime")]
        public string PlayTime { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("player")]
        public Character Player { get; set; }
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("world")]
        public World World { get; set; }
    }
    
    [System.CodeDom.Compiler.GeneratedCodeAttribute("XmlSchemaClassGenerator", "3.0.1188.0")]
    [System.SerializableAttribute()]
    [System.Xml.Serialization.XmlTypeAttribute("World", Namespace="http://www.univ-grenoble-alpes.fr/l3miage/EchoReborn")]
    [System.Diagnostics.DebuggerStepThroughAttribute()]
    [System.ComponentModel.DesignerCategoryAttribute("code")]
    public partial class World
    {
        
        [System.ComponentModel.DataAnnotations.RequiredAttribute(AllowEmptyStrings=true)]
        [System.Xml.Serialization.XmlElementAttribute("latestClearedLocationId")]
        public int LatestClearedLocationId { get; set; }
    }
}
