@startuml
class EchoReborn {
+initialState:InitialState
+gameState:GameState
}

class InitialState {
+location:Locations
+enemies:Enemies
+caracter:Character
}
class Skill{
+Id: Int
+Name: String
+Description: String
}

class Skills {
    +skills: List<Skill>
    
}

class BasicSkill {
    +ManaCost: Int
    +HealthCost: Int
    +Damage: Int
    +Heal: Int
    +AnimationClass: String
    +TargetType: TargetType
}

class ComplexSkill {
    +SkillClass: String
}

class Locations {
    +LocationList: List<Location>
}

class Location {
    +Id: Int
    +Name: String
    +Difficulty: Int
    +ConnectedLocationIds: List<Int>
    +EnemyEncounterIds: List<Int>
    +IsStartLocation: Boolean
    +IsFinalLocation: Boolean
}

class Enemies {
    +EnemyList: List<Enemy>
}

class Enemy {
    +Id: Int
    +Name: String
    +MaxHP: Int
    +SkillIds: List<Int>
    +AnimationClass: String
    +RewardXP: Int
}

class GameState {
    +SaveDate: DateTime
    +GameVersion: String
    +PlayTime: TimeSpan
    +Player: Character
    +World: World
}

class Character {
    +Level: Int
    +Experience: Int
    +CurrentHealth: Int
    +MaxHealth: Int
    +CurrentMana: Int
    +MaxMana: Int
    +SkillsIds: List<Int>
}

class World {
    +LatestClearedLocationId: Int
}

EchoReborn *-- "1" InitialState : initialState
EchoReborn *-- "1" GameState : gameState
GameState "1" *-- "1" Character
GameState "1" *-- "1" World

InitialState *-- "1" Skills : skills
InitialState *-- "1" Locations : location
InitialState *-- "1" Enemies : enemies
InitialState *-- "1" Character : character

Skill <|--  BasicSkill
Skill  <|-- ComplexSkill
Locations "1" *-- "*" Location
Enemies "1" *-- "1..*" Enemy:EnemyList
Enemy "1..*" --> "1" Skills : uses
Skills  *-- "1..*" Skill 
Character "1" --> "*" Skills : starts with
Location "0..*" --> "5" Enemy : encounters
@enduml
